# distributed-core

./: .gitignore  Makefile  README.md  pyproject.toml
distributed_core/: behaviors.py  plugins.py  tasks.py
distributed_core/core/: behaviors.py  config.py  config_loader.py  context.py  dispatch.py  execute.py  pipeline.py  plugins.py  tasks.py
distributed_core/services/events/: base.py  interface.py  manager.py  redis_event_bus.py
distributed_core/services/jobs/: base.py  behavior.py  fastapi_background_runner.py  in_memory_job_storage.py  interface.py  manager.py  redis_job_storage.py
distributed_core/services/storage/: base.py  behavior.py  execute.py  interface.py  local_file_storage.py  manager.py  minio_storage.py
