[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-core"
version = "0.1.2"
description = "Core components for distributed applications."
authors = [
    { name="Madhav Kandukuri", email="madhav165@gmail.com" }
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11,<=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [
    "redis>=6.2.0",
    "minio>=7.2.16",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[tool.setuptools.packages.find]
where    = ["./"]
include  = ["distributed_core*"]
exclude  = ["tests*"]

[dependency-groups]
dev = [
    "twine>=6.1.0",
    "build>=1.2.2",
    "uv",
    "ruff",
    "pylint",
]

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.pylint]
ignore = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]
